data/derived/sp14/progs/unify/prog3665.ml.out
Characters 141-157:
  if prod > 10 then ((prod mod 10)::( (prod / 10) + (mulByDigit i t) ))::t
                                                    ^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int
